# ROCR-Runtime

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  LICENSE.txt  Makefile  README.md  format  hsakmt-backward-compat.cmake  hsakmt-config.cmake.in  hsakmt-dev.txt  libhsakmt.pc.in
libhsakmt/: CMakeLists.txt  LICENSE.md  README.md  hsakmt-config.cmake.in  libhsakmt.pc.in
libhsakmt/RPM/: hsakmt-roct-devel.spec.in  post.in  postun.in
libhsakmt/include/hsakmt/: hsakmt.h  hsakmttypes.h
libhsakmt/src/: debug.c  events.c  fmm.c  fmm.h  globals.c  libhsakmt.c  libhsakmt.h  libhsakmt.ver  memory.c  openclose.c  pc_sampling.c  perfctr.c  pmc_table.c  pmc_table.h  queues.c  rbtree.c  rbtree.h  rbtree_amd.h  spm.c  svm.c  time.c  topology.c  version.c
libhsakmt/tests/kfdtest/: CMakeLists.txt  LICENSE.kfdtest  README.txt
libhsakmt/tests/reopen/: CMakeLists.txt  kmtreopen.c
rocrtst/common/utils_test/: CMakeLists.txt  utils_cpp11_gtest.cpp  utils_timer_gtest.cpp  utils_timer_test.cpp  utils_timer_test.hpp
rocrtst/gtest/: CMakeLists.txt
rocrtst/gtest/src/: gtest-all.cpp  gtest-death-test.cpp  gtest-filepath.cpp  gtest-internal-inl.h  gtest-port.cpp  gtest-printers.cpp  gtest-test-part.cpp  gtest-typed-test.cpp  gtest.cpp  gtest_main.cpp
rocrtst/samples/: CMakeLists.txt  README.txt
rocrtst/samples/async_mem_copy/: async_mem_copy.cc
rocrtst/samples/binary_search/: binary_search.cc
rocrtst/samples/ipc/: ipc.cc
rocrtst/samples/rocm_async/: CMakeLists.txt  Readme.txt  base_test.cpp  base_test.hpp  common.cpp  common.hpp  hsatimer.cpp  hsatimer.hpp  main.cpp  os.cpp  os.hpp  rocm_async.cpp  rocm_async.hpp  rocm_async_io.cpp  rocm_async_parse.cpp  rocm_async_print.cpp  rocm_async_report.cpp  rocm_async_topology.cpp  rocm_async_trans.cpp  rocm_async_validate.cpp
rocrtst/samples/rocrinfo/: rocrinfo.cc
rocrtst/suites/aie/: CMakeLists.txt  add_one.pdi  add_one_insts.txt  aie_hsa_bare_add_one.cc  aie_hsa_dispatch_test.cc  amdxdna_accel.h  hsa_ipu.h
rocrtst/suites/performance/: CMakeLists.txt  cp_process_time.cc  cp_process_time.h  cu_masking.cc  cu_masking.h  device_load_bandwidth.cc  device_load_bandwidth.h  device_store_bandwidth.cc  device_store_bandwidth.h  dispatch_time.cc  dispatch_time.h  enqueueLatency.cc  enqueueLatency.h  flush_latency.cc  flush_latency.h  hsa_info.cc  hsa_info.h  image_bandwidth.cc  image_bandwidth.h  image_load_bandwidth.cc  image_load_bandwidth.h  image_store_bandwidth.cc  image_store_bandwidth.h  main.cc  main.h  matrix_transpose.cc  matrix_transpose.h  memory_allocation.cc  memory_allocation.h  memory_async_copy.cc  memory_async_copy.h  memory_async_copy_numa.cc  memory_async_copy_numa.h  memory_copy.cc  memory_copy.h  queue_concurrency.cc  queue_concurrency.h  queue_create_destroy_latency.cc  queue_create_destroy_latency.h  system_load_bandwidth.cc  (+8 more)
rocrtst/suites/test_common/: CMakeLists.txt  main.cc  main.h  test_base.cc  test_base.h  test_case_template.cc  test_case_template.h  test_common.cc  test_common.h
runtime/hsa-amd-aqlprofile/src/: CMakeLists.txt
runtime/hsa-ext-aql-profile/: CMakeLists.txt  Readme.txt
runtime/hsa-ext-aql-profile/cmake_modules/: exportToolFlags.cmake
runtime/hsa-ext-aql-profile/doc/: HSA_ext_profile_api.pptx  HSA_ext_profile_api_v1_1_0.docx
runtime/hsa-ext-aql-profile/inc/: amd_aql_pm4_ib_packet.h  hsa_ext_amd_aql_profile.h
runtime/hsa-ext-aql-profile/src/: CMakeLists.txt
runtime/hsa-ext-aql-profile/test/: CMakeLists.txt
runtime/hsa-ext-finalize/: CMakeLists.txt
runtime/hsa-ext-image/: CMakeLists.txt
runtime/hsa-runtime/: CMakeLists.txt  LICENSE.md  README.md  hsa-backward-compat.cmake  hsa-runtime64-config.cmake.in  hsacore.so.def  hsacore.so.link
runtime/hsa-runtime-tools/: CMakeLists.txt
runtime/hsa-runtime/DEBIAN/: post_install  postinst  postinst.in  pre_remove  prerm  prerm.in
runtime/hsa-runtime/RPM/: postun.in  rpm_post  rpm_postun
runtime/hsa-runtime/cmake_modules/: FindLibElf.cmake  hsa_common.cmake  utils.cmake
runtime/hsa-runtime/core/: CMakeLists.txt  hsacore.so.def
runtime/hsa-runtime/image/: CMakeLists.txt  Makefile.image  amd_ext.cpp  blit_kernel.cpp  blit_kernel.h  blit_kernel_cl.cl  blit_object_gfx7xx.cpp  blit_object_gfx8xx.cpp  blit_object_gfx9xx.cpp  device_info.cpp  device_info.h  hsa_ext_image.cpp  image.so.def  image_lut.h  image_lut_gfx11.cpp  image_lut_kv.cpp  (+21 more)
src/: CMakeLists.txt  LICENSE.md  Makefile  README.md  debug.c  events.c  fmm.c  fmm.h  globals.c  hsa-backward-compat.cmake  hsacore.so.def  libhsakmt.c  libhsakmt.h  libhsakmt.ver  memory.c  openclose.c  pc_sampling.c  pci_ids.c  pci_ids.h  perfctr.c  pmc_table.c  pmc_table.h  queues.c  rbtree.c  rbtree.h  spm.c  svm.c  time.c  topology.c  version.c
src/DEBIAN/: postinst  pre_remove
src/RPM/: hsa-rocr.spec.in  post.in  rpm_post  rpm_postun
src/cmake_modules/: ClangTidy.cmake  EnableCompilerWarnings.cmake  FindLibElf.cmake  hsa_common.cmake  utils.cmake
src/core/: CMakeLists.txt  hsacore.so.def
src/image/: blit_kernel.cpp  blit_kernel.h  blit_object_gfx7xx.cpp  blit_object_gfx8xx.cpp  device_info.cpp  device_info.h  hsa_ext_image.cpp  image_lut_gfx11.h  image_lut_kv.cpp  image_lut_kv.h  image_manager_ai.cpp  image_manager_ai.h  image_manager_gfx11.cpp  image_manager_gfx12.cpp  image_manager_gfx12.h  image_manager_kv.cpp  image_manager_kv.h  image_manager_nv.cpp  image_runtime.cpp  resource.h  resource_ai.h  resource_gfx11.h  resource_gfx12.h  resource_kv.h  resource_nv.h  util.h
src/inc/: Brig.h  amd_hsa_elf.h  amd_hsa_kernel_code.h  hsa.h  hsa_api_trace.h  hsa_ext_amd.h  hsa_ext_image.h  hsa_ven_amd_aqlprofile.h  hsa_ven_amd_pc_sampling.h
src/libamdhsacode/: CMakeLists.txt  amd_core_dump.cpp  amd_elf_image.cpp  amd_hsa_code.cpp  amd_hsa_code_util.cpp  amd_hsa_code_util.hpp  amd_hsa_locks.cpp  amd_hsa_locks.hpp  amd_options.cpp  amd_options.hpp
src/loader/: AMDHSAKernelDescriptor.h  CMakeLists.txt  executable.cpp  executable.hpp  loaders.cpp  loaders.hpp
src/pcs/: hsa_ven_amd_pc_sampling.cpp  pcs_runtime.cpp  pcs_runtime.h
tests/kfdtest/: CMakeLists.txt  kfdtest.exclude
(+947 files in other folders)
